--- a/src/assets/styles/blocks/pokemon-page.scss
+++ b/src/assets/styles/blocks/pokemon-page.scss
@@ -1,5 +1,40 @@
 .pokemon-page{
     &__wrapper{
-
+        position: fixed;
+        top: 0;
+        left: 0%;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        background-color: rgba($color: #000000, $alpha: 0.6);
+    }
+    &__container{
+        @include center;
+        background-color: #fff;
+        width: 80%;
+        height: 75%;
+        display: flex;
+        padding: 3rem;
+        border-radius: 30px;
+        box-shadow: 0px 4px 25px 10px rgba(1, 1, 1, 0.4);  
+    }
+    &__img{
+        width: 400px;
+        height: auto;
+        &-container{
+            width: 400px;
+            height: 400px;
+            padding: 2rem;
+            background-color: #fff;
+            border-radius: 30px;
+            box-shadow: 0px 4px 10px 5px rgba(1, 1, 1, 0.4);  
+        }
+    }
+    &__stats{
+        margin-left: 3rem;
+    }
+    &__title{
+        font-size: 5rem;
+        margin-bottom: 0;
     }
 }
