--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,4 +27,6 @@ body {
 @import './blocks/filter.scss';
 @import './blocks/pokemon-card.scss';
 @import './blocks/pokemon-page.scss';
+@import './blocks/pokemon-list.scss';
+@import './blocks/scroll-trigger.scss';
 //========== </БЛОКИ>==========
