--- a/src/assets/styles/blocks/search.scss
+++ b/src/assets/styles/blocks/search.scss
@@ -56,3 +56,14 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .search{
+        &__input{
+            width: 80%;
+        }
+        &__btn{
+            width: 10%;
+        }
+    }
+}
