--- a/src/assets/styles/blocks/header.scss
+++ b/src/assets/styles/blocks/header.scss
@@ -7,3 +7,12 @@
         height: auto;
     }
 }
+
+@media (max-width: 415px) {
+    .header{
+    &__logo-img{
+        width: 300px;
+        height: auto;
+    }
+}
+}
