--- a/src/assets/styles/blocks/pokemon-page.scss
+++ b/src/assets/styles/blocks/pokemon-page.scss
@@ -1,16 +1,16 @@
 .pokemon-page{
     &__wrapper{
-        display: none;
         position: fixed;
         top: 0;
-        left: 0%;
-        z-index: 3;
+        left: 0;
         width: 100%;
         height: 100%;
+        z-index: 100;
         background-color: rgba($color: #000000, $alpha: 0.6);
     }
     &__container{
         @include center;
+        position: relative;
         background-color: #fff;
         width: 80%;
         height: 75%;
@@ -20,22 +20,56 @@
         box-shadow: 0px 4px 25px 10px rgba(1, 1, 1, 0.4);  
     }
     &__img{
-        width: 400px;
-        height: auto;
+        width: 25vw;
+        height: 25vh;
         &-container{
-            width: 400px;
-            height: 400px;
+            height: 27vh;
             padding: 2rem;
             background-color: #fff;
             border-radius: 30px;
-            box-shadow: 0px 4px 10px 5px rgba(1, 1, 1, 0.4);  
+            box-shadow: 0px 4px 10px 5px rgba(1, 1, 1, 0.4);
+        }
+    }
+    &__title{
+        &::first-letter{
+            text-transform: uppercase;
         }
     }
     &__stats{
         margin-left: 3rem;
+        font-size: 2.4rem;
     }
     &__title{
         font-size: 5rem;
         margin-bottom: 0;
+    }
+    &__btn{
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 2rem;
+        width: 50px;
+        height: 50px;
+        background-color: $primary-yellow;
+        color: #fff;
+        font-weight: bold;
+        letter-spacing: 1px;
+        border-radius: 50%;
+        transition: 0.3s ease all;
+        cursor: pointer;
+        border: none;
+        outline: none;
+        box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.25); 
+        &:hover{
+            box-shadow: 0px 0px 15px 5px rgba(254, 206, 2, 0.3);
+            color: rgb(168, 137, 0);
+            border-right: none;
+            transition: 0.3s ease all;
+        }
+        &:active{
+            background-color: rgb(168, 137, 0);
+            color: #ffff;
+            transition: 0.3s ease all;
+         }  
     }
 }
