--- a/src/assets/styles/blocks/pokemon-card.scss
+++ b/src/assets/styles/blocks/pokemon-card.scss
@@ -71,7 +71,7 @@
     &__types{
         display: flex;
         &-container{
-            
+            margin-top: -0.5rem;
         }
         &-img{
             width: 42px;
