--- a/src/assets/styles/blocks/pokemon-page.scss
+++ b/src/assets/styles/blocks/pokemon-page.scss
@@ -14,7 +14,6 @@
         background-color: #fff;
         width: 80%;
         height: 75%;
-        display: flex;
         padding: 3rem;
         border-radius: 30px;
         box-shadow: 0px 4px 25px 10px rgba(1, 1, 1, 0.4);  
@@ -24,6 +23,9 @@
         height: 25vh;
         &-container{
             height: 27vh;
+            width: 25vw;
+            float: left;
+            margin-right: 2rem;
             padding: 2rem;
             background-color: #fff;
             border-radius: 30px;
@@ -36,12 +38,46 @@
         }
     }
     &__stats{
-        margin-left: 3rem;
-        font-size: 2.4rem;
+        // font-size: 2.4rem;
+    }
+    &__base-stats{
+        display: flex;
+        justify-content: space-around;
+        font-size: 1.6rem;
+        &__wrapper{
+            position: absolute;
+            bottom: 10px;
+            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        &__item{
+            width: 50px;
+            padding: 0.5rem;
+            text-align: center;
+            border: 2px solid  #000;
+            border-bottom: 0;
+        }
+    }
+    &__stats-names{
+        display: flex;
+        justify-content: space-around;
+        margin-top: -3rem;
+        font-size: 1.2rem;
+        &__item {
+            width: 50px;
+            padding: 0.5rem;
+            text-align: center;
+            border: 2px solid  #000;
+            border-top: 0;
+            &::first-letter{
+                text-transform: uppercase;
+            }
+        }
     }
     &__title{
-        font-size: 5rem;
         margin-bottom: 0;
+        font-size: 5rem;
     }
     &__btn{
         position: absolute;
